CHANGES IN VERSION 1.1.4
------------------------
    o xgx_stat_ci: for ordinal response, fix bug where response categories with count of zero were dropped and not displayed
    o xgx_scale_y_percentchangelog10: improved breaks, to use xgx_breaks_log10
    o xgx_scale_x_percentchangelog10: improved breaks, to use xgx_breaks_log10

CHANGES IN VERSION 1.1.3
------------------------
    o xgx_conf_int: change df in xgx_conf_int from length(y) to length(y) - 1 for normal and lognormal distributions. 
    o xgx_conf_int: Add warnings when length of y is 1, and change confidence interval from NaN to (-Inf, Inf) for normal and (0, Inf) for lognormal distributions. 
    o xgx_conf_int: Add methods options for binomial and ordinal distributions. Change default method of ordinal to "goodman"
    o removed theoph.Rmd and sad_pkpd.Rmd from CRAN distribution (still available in GitHub) 

CHANGES IN VERSION 1.1.2
------------------------
    o change predictdf.polr so inputs match predictdf generic, to fix S3 method consistency warning

CHANGES IN VERSION 1.1.1
------------------------
    o fix bug in xgx_stat_smooth / predictdf.nls that caused an error when formula had only one parameter to fit
    o add predict.nls function to produce predictions and confidence intervals for nls objects, similar to predict.lm for lm objects

CHANGES IN VERSION 1.1.0
------------------------
    o xgx_stat_smooth() added to allow for nonlinear fitting + confidence intervals, including emax fitting, and ordinal response fitting
    o xgx_stat_ci() updated with binning by quantiles, and ordinal/multinomial confidence intervals
    o (BETA) xgx_auto_explore() function to automatically compile Rmd templates from xgx website!
    o xgx_save and xgx_dirs2char: Added error checking that dirs variable is list. 
    o xgx_save: Enable change in font color and size for directories caption    

CHANGES IN VERSION 1.0.9
------------------------